--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="resp-tabs-container">
 					<div class="tab-1 resp-tab-content">
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/jika.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/jika.jpg" data-lightbox="example-set" data-title="Usman Isma'il was a student who attended Primary and Secondary section of the school. He graduated in the year 2013. He studied Bachelor of Tech in Engineering at Abubakar Tafawa Balewa University, Bauchi">
 								<img src="images/jika.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Usman Isma'il</h5>
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/MD.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/MD.jpg" data-lightbox="example-set" data-title="Muhd Dembo was a student who attended Secondary section of the school. He graduated in the year 2014. He studied Bachelor of Tech in Computer Science at Abubakar Tafawa Balewa University, Bauchi.">
 								<img src="images/MD.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Muhd Dembo</h5>
@@ -228,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/ahmad.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/ahmad.jpg" data-lightbox="example-set" data-title="Ahmad Bashir attended and left Al-iman in the year 2013. He currently holds Bachelor of Engineering in Chemical Engineering at Abubakar Tafawa Balewa University, Bauchi">
 								<img src="images/ahmad.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Ahmad Bashir</h5>
