--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/MD.jpg" data-lightbox="example-set" data-title="Muhd Dembo was a student who attended Secondary section of the school. He graduated in the year 2014. He studied Bachelor of Tech in Computer Science at Abubakar Tafawa Balewa University, Bauchi.">
+							<a href="images/MD.jpg" data-lightbox="example-set" data-title="I am Muhammad Adamu Dembo. I attended Iqamatus Sunnah Primary and Al-iman Secondary school. I graduated in the year 2014. He studied National Diploma in Computer Science at The Federal Polytechnic, Bauchi. I'm currently studying Bachelor of Technology in Computer Science at Abubakar Tafawa Balewa University, Bauchi.">
 								<img src="images/MD.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Muhd Dembo</h5>
@@ -228,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/ahmad.jpg" data-lightbox="example-set" data-title="Ahmad Bashir attended and left Al-iman in the year 2013. He currently holds Bachelor of Engineering in Chemical Engineering at Abubakar Tafawa Balewa University, Bauchi">
+							<a href="images/ahmad.jpg" data-lightbox="example-set" data-title="I am Ahmad Abubakar Bashir. I was born and bred in jahun metropolis of Bauchi. I attended Al-iman school for both my primary and secondary school education. I am the first child to Malam Abubakar and malama Amina. I studied chemical engineering in ATBU Bauchi from 2012/13 to 2018.">
 								<img src="images/ahmad.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Ahmad Bashir</h5>
@@ -236,7 +236,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/nafisa.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/nafisa.jpg" data-lightbox="example-set" data-title="I am Nafisat Ibrahim Mahe. 
+Born in Bauchi local government,  Bauchi state.
+ Muslimah,Hausa by Tribe,I am Single.I reside in No. A204 Gidan Alkali Aminu Gombe Road Bauchi, Bauchi State I attended my primary school at Babban Mutum Science Primary School Bauchi from 2002-2008, my junior secondary school at Kandahar Junior Secondary School Bauchi from 2008-2011, my senior secondary school at Al-iman School Bauchi from 2011-2014,Which from then  I went to School of Midwifery Abubakar Tafawa Balewa University Teaching Hospital from 2015-2018, I am now a registered Midwife. I grew up in an extended family with brothers and sisters,being the last born to my Mom. My Dad and Mom are all civil servants.I am not talkactive neither too silent,Being able to handle people properly.I love reading and cooking, also liking to help women and children,I am enjoying being a Qualified Midwife as I can help people in need of my assistace.">
 								<img src="images/nafisa.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Nafisah Mahe</h5>
