--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -11,8 +5,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="TechEdu Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Al-iman School, Al-iman, Al-iman Old Students Association" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -86,7 +79,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			   <div class="baner-info">
 			       <h4>The best learning institution</h4>
 				   <h3><span>w</span>elcome to <span>A</span>l-iman <span>S</span>chool <span>B</span>auchi</h3>
-				  <p>Itaque earum rerum hic tenetur a sapiente delectus </p>
+				  <p><script language="javascript">
+ var today = new Date();
+ document.write(today);
+ </script> </p>
 				  <a class="hvr-rectangle-out w3_play_icon1" href="#" data-toggle="modal" data-target="#myModal"> read more</a>
 			   </div>
 			<!--/banner-ingo-->		
@@ -119,7 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h5>Roin vel enim nec ipsum finibus.Duis euismod massa utab.</h5>
 			<div class="col-md-7  w3ls-about-left">
 				<p>Al-Iman School has been in existence since the year 2007. It has produced high quality and productive citizens who are serving the country and humanity in all spheres of human endeavors. Al-Iman is located in the serene and receptive countryside of Bauchi, Bauchi State capital in the North-eastern region of Nigeria. The School environment is conducive for learning and the school curriculum is of high standard.</p>
-				<p class="about-bottom">Duis euismod massa ut sem fringilla blandit. Proin vel enim nec ipsum finibus.Duis euismod massa ut sem fringilla blandit. Proin vel enim nec ipsum finibus.Duis euismod massa ut sem fringilla blandit. Proin vel enim nec ipsum.</p>
+				<p class="about-bottom"> </p>
 			</div>
 			<div class="col-md-5 w3ls-row">
 				<div class="col-md-6 col-sm-6 wthree-about-left">
@@ -133,35 +129,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 			<div class="stats-info agileits-w3layouts">
 				<div class="col-sm-3 col-xs-3 stats-grid">
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='324' data-delay='.5' data-increment="1">324</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='5' data-delay='.5' data-increment="1">5</div>
 					<div class="stats-img stat2">
 							<p>branches</p>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-3 stats-grid">
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='200' data-delay='.5' data-increment="1">200</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='2000' data-delay='.5' data-increment="1">2000</div>
 					<div class="stats-img stat2">
 						<p>visitors</p>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-3 stats-grid stat1">
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='156' data-delay='.5' data-increment="1">156</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='20' data-delay='.5' data-increment="1">20</div>
 					<div class="stats-img stat2">
 						<p>Awards</p>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-3 stats-grid stat1">
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='156' data-delay='.5' data-increment="1">156</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='4' data-delay='.5' data-increment="1">4</div>
 					<div class="stats-img stat2">
-						<p>centres</p>
+						<p>Departments</p>
 					</div>
 				</div>
 				<div class="clearfix"></div>
 		 </div>
 		</div>
 	</div>
-	<!-- //about -->
-  <!--services-->
+	<!-- //about --> 
+  <!--services
   <div class="agileits-services w3ls-section" id="agileits-services" >
 		<div class="container">
 			<h3 class="w3ls-title">services </h3>
@@ -193,7 +189,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!--//agileits-services-->
 <!--portfolio-->
 	<div id="portfolio" class="portfolio w3ls-section">
@@ -212,7 +208,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="resp-tabs-container">
 					<div class="tab-1 resp-tab-content">
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/jika.jpg" data-lightbox="example-set" data-title="Usman Isma'il was a student who attended Primary and Secondary section of the school. He graduated in the year 2013. He studied Bachelor of Tech in Engineering at Abubakar Tafawa Balewa University, Bauchi">
+							<a href="images/jika.jpg" data-lightbox="example-set" data-title="I am Usman an indigene of Bauchi state, Bauchi LGA. I was born into the family of Ismail Sabo Gwarm in 1995. I obtained my first school leaving certificate and secondary School certificate from Aliman in 2007 and 2013 respectively. I'm currently a student of 500 level, Quantity Surveying Department, Abubakar Tafawa Balewa University, Bauchi.">
 								<img src="images/jika.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Usman Isma'il</h5>
@@ -220,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/MD.jpg" data-lightbox="example-set" data-title="I am Muhammad Adamu Dembo. I attended Iqamatus Sunnah Primary and Al-iman Secondary school. I graduated in the year 2014. He studied National Diploma in Computer Science at The Federal Polytechnic, Bauchi. I'm currently studying Bachelor of Technology in Computer Science at Abubakar Tafawa Balewa University, Bauchi.">
+							<a href="images/MD.jpg" data-lightbox="example-set" data-title="I am Muhammad Adamu Dembo. I attended Iqamatus Sunnah Primary and Al-iman Secondary school. I graduated in the year 2014. I studied National Diploma in Computer Science at The Federal Polytechnic, Bauchi. I'm currently studying Bachelor of Technology in Computer Science at Abubakar Tafawa Balewa University, Bauchi.">
 								<img src="images/MD.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>Muhd Dembo</h5>
@@ -246,7 +242,7 @@ Born in Bauchi local government,  Bauchi state.
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/students.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/students.jpg" data-lightbox="example-set" data-title="(L-R) Nazif Danladi Adamu, Muhd Dembo and Ahmad Umar Ladan. They graduated in the year 2014">
 								<img src="images/students.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>2014 Set</h5>
@@ -254,7 +250,7 @@ Born in Bauchi local government,  Bauchi state.
 							</a>
 						</div>
 						<div class="col-md-3 portfolio-grids">
-							<a href="images/2016.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+							<a href="images/2016.jpg" data-lightbox="example-set" data-title="Some graduates of Al-iman in 2016.">
 								<img src="images/2016.jpg" class="img-responsive zoom-img" alt=""/>
 								<div class="b-wrapper">
 									<h5>2016 Set</h5>
@@ -482,7 +478,7 @@ Born in Bauchi local government,  Bauchi state.
 	<div class="contact-bottom w3ls-section" id="contact">
 		<div class="container">
 			<h3 class="w3ls-title">contact</h3>
-			<p>Lorem ipsum dolor sit amet consec tetuer adi piscing eLorem ipsum dolor sit amet consec tetuer adi piscing.</p>
+			<p>You may contact us via mail, phone number below or at the school premises, Adjacent Amsad Clinics, Murtala Mohammed Way, Bauchi.</p>
 			<div class="w3layouts-list">
 					<div class="col-md-4 li"><span class="fa fa-map-marker" aria-hidden="true"></span><h6>Bauchi, Nigeria.</h6></div>
 					<div class="col-md-4 li"><span class="fa fa-phone" aria-hidden="true"></span><h6>(+234) 070 610 4143</h6></div>
@@ -490,7 +486,7 @@ Born in Bauchi local government,  Bauchi state.
 					<div class="clearfix"></div>
 			</div>
 			<div class="col-md-6 col-sm-6  col-xs-6 agileits_w3layouts-map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13251.376806128725!2d151.2012371852675!3d-33.86790584050207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae401e8b983f%3A0x5017d681632ccc0!2sSydney+NSW+2000%2C+Australia!5e0!3m2!1sen!2sin!4v1492686664992" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d288.01697376638185!2d9.82938601250939!3d10.300733577703296!2m3!1f0!2f39.26514788948348!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x1054d743775e5799%3A0xf3f14c6e266865ba!2sAl-Iman+School!5e1!3m2!1sen!2sng!4v1542543573043" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>	
 			<div class="col-md-6 col-sm-6 col-xs-6 contact-right-w3l">
 				<form action="#" method="post">
@@ -530,7 +526,7 @@ Born in Bauchi local government,  Bauchi state.
 				<li><a class="icon fb" href="#"><i class="fa fa-facebook"></i></a></li>
 				<li><a class="icon tw" href="#"><i class="fa fa-twitter"></i></a></li>
 				<li><a class="icon pin" href="#"><i class="fa fa-pinterest"></i></a></li>
-				<li><a class="icon db" href="#"><i class="fa fa-dribbble"></i></a></li>
+				<li><a class="icon db" href="https://www.instagram.com/al_imanians/"><i class="fa fa-dribbble"></i></a></li>
 				<li><a class="icon gp" href="#"><i class="fa fa-google-plus"></i></a></li>
 			</ul>
 		</div>
