--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="banner-bottom-girds">
 					<div class="agileits-banner-grid bg-w3ls-active">
 						<span class="fa fa-university banner-icon" aria-hidden="true"></span>
-						<h4>Academics</h4>
+						<!-- <h4>Academics</h4>
 						<p>Itaque earum rerum hic tenetur a sapiente delectus 
 							reiciendis maiores alias consequatur aut.</p>
 						<a class="hvr-rectangle-out w3_play_icon1" href="#" data-toggle="modal" data-target="#myModal"> read more</a>
@@ -107,7 +107,7 @@
 						<p>Itaque earum rerum hic tenetur a sapiente delectus 
 							reiciendis maiores alias consequatur aut.</p>
 							<a class="hvr-rectangle-out w3_play_icon1" href="#" data-toggle="modal" data-target="#myModal"> read more</a>
-					</div>
+					</div> -->
 					<div class="clearfix"></div>
 			    </div>		
 			</div>	
