--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<h2 class="w3ls-title">about us</h2>
 			<h5>Roin vel enim nec ipsum finibus.Duis euismod massa utab.</h5>
 			<div class="col-md-7  w3ls-about-left">
-				<p>Al-Iman School has been in existence since the year 2007. It has produced high quality and productive citizens who are serving the country and humanity in all spheres of human endeavors. Al-Iman is located in the serene and receptive countryside of Bauchi, Bauchi State capital in the North-eastern region of Nigeria. The School environment is conducive for learning and the school curriculum is of high standard.</p>
+				<p>Al-Iman School has been in existence since the year 2004. It has produced high quality and productive citizens who are serving the country and humanity in all spheres of human endeavors. Al-Iman is located in the serene and receptive countryside of Bauchi, Bauchi State capital in the North-eastern region of Nigeria. The School environment is conducive for learning and the school curriculum is of high standard.</p>
 				<p class="about-bottom"> </p>
 			</div>
 			<div class="col-md-5 w3ls-row">
@@ -201,10 +201,10 @@
 			<div id="horizontalTab">
 				<ul class="resp-tabs-list">
 					<li class="resp-tab-item"><span>All</span></li>
-					<li class="resp-tab-item"><span>Category1</span></li>
+					<!-- <li class="resp-tab-item"><span>Category1</span></li>
 					<li class="resp-tab-item"><span>Category2</span></li>
 					<li class="resp-tab-item"><span>Category3</span></li>
-					<li class="resp-tab-item"><span>Category4</span></li>					
+					<li class="resp-tab-item"><span>Category4</span></li>	-->				
 				</ul>	
 				<div class="clearfix"> </div>	
 				<div class="resp-tabs-container">
