--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Al-iman School, Al-iman, Al-iman Old Students Association" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //for-mobile-apps -->
+<!-- //for mobile apps -->
 	
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
   
